--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ dns.client.accessKeySecret=https://ram.console.aliyun.com/users
 # 上海：alidns.cn-shanghai.aliyuncs.com
 # 北京：alidns.cn-beijing.aliyuncs.com
 dns.client.endpoint=alidns.cn-hangzhou.aliyuncs.com
-#24小时刷新一次
+#10分钟刷新一次
 dns.client.period=10
 #只动态刷新“www”开头的dns，如果全部刷新填true。
 dns.client.all=false
